# solution-pose-estimation

./: CMakeLists.txt  README.md  ar_example.cpp  ar_example.h  calibSettings.xml  cameraParameters.xml  camera_projection_measurement.cpp  camera_projection_measurement.h  feature_utils.cpp  homography_pose_estimator.cpp  homography_pose_estimator.h  lab_6.cpp  lab_6.h  main.cpp  moba_pose_estimator.cpp  moba_pose_estimator.h  plane_world_model.cpp  plane_world_model.h  pnp_pose_estimator.cpp  pnp_pose_estimator.h  pose_estimator.h  scene_3d.cpp  scene_3d.h  solution_pose_estimation.cpp  solution_pose_estimation.h
.devcontainer/: Dockerfile  devcontainer.json
